2002-08-26  IKEBE Tomohiro  <ikebe@edge.co.jp>

	* original version.
