@@ -1,0 +1,12 @@
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Class-DBI-Loader
+version:      0.02
+version_from: lib/Class/DBI/Loader.pm
+installdirs:  site
+requires:
+    Class::DBI:                    0.89
+    Test::More:                    0.32
+    DBI:                           1.3
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.12
